--- a/index.css
+++ b/index.css
@@ -1,4 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz@6..12&family=Roboto+Mono&family=Titan+One&display=swap');
 body {
     background-color: rgb(42, 42, 42);
     color: rgb(200, 200, 200);
+    font-family: 'Nunito Sans', sans-serif;
 }
