--- a/index.css
+++ b/index.css
@@ -1,7 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz@6..12&family=Roboto+Mono&family=Titan+One&display=swap');
 body {
-    margin-left: 30px;
     background-color: #0d1117;
     color: rgb(200, 200, 200);
     font-family: 'Nunito Sans', sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.content {
+   margin-top: 5rem;
 }
